# decorative-secrets

./: 404.html  AGENTS.md  CLAUDE.md  CNAME  Makefile  README.md  hatch_plugins.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: distribute.yml  test.yml
api/callback/: index.html
api/databricks/: index.html
api/defaults/: index.html
api/environment/: index.html
api/onepassword/: index.html
api/utilities/: index.html
cli/: index.html
contributing/: index.html
docs/: CNAME  cli.md  contributing.md  index.md  license.md
docs/api/: callback.md  databricks.md  defaults.md  environment.md  onepassword.md  utilities.md
docs/superpowers/specs/: 2026-06-24-timeout-decorator-design.md
license/: index.html
search/: search_index.json
src/decorative_secrets/: _utilities.py  callback.py  databricks.py  environment.py  errors.py  onepassword.py  subprocess.py  utilities.py
tests/: conftest.py  test__utilities.py  test_callback.py  test_databricks.py  test_defaults.py  test_environment.py  test_errors.py  test_main.py  test_onepassword.py  test_subprocess.py  test_utilities.py
